--- a/style.css
+++ b/style.css
@@ -23,6 +23,13 @@ h1, h2 {
 .logo-section {
     animation: fadeInScale 2s ease-in-out;
     margin-bottom: 20px;
+    text-shadow: -4px 4px #ef3550,
+               -8px 8px #f48fb1,
+               -12px 12px #7e57c2,
+               -16px 16px #2196f3,
+               -20px 20px #26c6da,
+               -24px 24px #43a047,
+               -28px 28px #eeff41,
 }
 
 .logo-section img {
