--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ h1, h2 {
                -16px 16px #2196f3,
                -20px 20px #26c6da,
                -24px 24px #43a047,
-               -28px 28px #eeff41,
+               -28px 28px #eeff41;
 }
 
 .logo-section img {
